<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <!-- Contiene dos layouts en este ejemplo -->
    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="match_parent"
        android:layout_height="428dp"
        android:layout_margin="6dp">

        <!-- Layout 1º = imagen de Windows -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/grafica"
                android:textColor="#b7102f"
                android:textSize="25sp"/>

            <ImageView
                android:id="@+id/imageView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/grafica"
                android:contentDescription="@string/grafica" />

            <TextView
                android:id="@+id/precioGrafica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="18sp" />
        </LinearLayout>


        <!-- Layout 2º = imagen de Ubuntu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/placaBase"
                android:textColor="#b7102f"
                android:textSize="25sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/placa_base" />
            <TextView
                android:id="@+id/precioPlaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="18sp" />

        </LinearLayout>

        <!-- Layout 3º = imagen de Mac OS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/raton"
                android:textColor="#b7102f"
                android:textSize="25sp"/>

            <ImageView
                android:id="@+id/imageView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/raton" />
            <TextView
                android:id="@+id/precioRaton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Layout 4º = imagen de FreeBSD -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ssd"
                android:textColor="#b7102f"
                android:textSize="25sp"/>

            <ImageView
                android:id="@+id/imageView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/ssd" />
            <TextView
                android:id="@+id/precioSsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Layout 5º = imagen de FreeBSD -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/teclado"
                android:textColor="#b7102f"
                android:textSize="25sp"/>

            <ImageView
                android:id="@+id/imageView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/teclado" />
            <TextView
                android:id="@+id/precioTeclado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Layout 6º = imagen de FreeBSD -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/torre"
                android:textColor="#b7102f"
                android:textSize="25sp"/>

            <ImageView
                android:id="@+id/imageView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/torre" />
            <TextView
                android:id="@+id/preciotorre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="18sp" />
        </LinearLayout>

    </ViewFlipper>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cambiar precio" />

    </LinearLayout>
</LinearLayout>